tests/compile-fail/serde_core_without_marker.stderr
error[E0277]: the trait bound `[u8; 32]: SerializableSecret` is not satisfied
  --> tests/compile-fail/serde_core_without_marker.rs:18:35
   |
18 |     let _ = serde_json::to_string(&fixed);
   |             --------------------- ^^^^^^ the trait `SerializableSecret` is not implemented for `[u8; 32]`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `SerializableSecret`:
             ExportableArrayInner<N>
             ExportableStringInner
             ExportableVecInner
   = note: required for `Fixed<[u8; 32]>` to implement `serde_core::ser::Serialize`
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `std::string::String: SerializableSecret` is not satisfied
  --> tests/compile-fail/serde_core_without_marker.rs:19:35
   |
19 |     let _ = serde_json::to_string(&dyn_str);
   |             --------------------- ^^^^^^^^ the trait `SerializableSecret` is not implemented for `std::string::String`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `SerializableSecret`:
             ExportableArrayInner<N>
             ExportableStringInner
             ExportableVecInner
   = note: required for `Dynamic<std::string::String>` to implement `serde_core::ser::Serialize`
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`
